--- a/Data/README
+++ b/Data/README
@@ -1,1 +1,3 @@
 This contains the dataset on which study is done.
+File size is more than 25MB
+Link for the file: https://www.kaggle.com/datasets/manishabhatt22/marketing-campaign-performance-dataset
